syntax = "proto3";

package account;

option go_package = "accountpb";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.account";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// AccountService allows for account management on the Node
service AccountService {
  rpc UpdateAccount(UpdateAccountRequest) returns (AccountData) {
    option (google.api.http) = {
      put: "/v1/accounts/{account_id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Updates an Account"
    };
  }
}

message UpdateAccountRequest {
  string account_id = 1;
  AccountData data = 2;
}

message EthereumAccount {
  string address = 1;
  string key = 2;
  string password = 3;
}

message KeyPair {
  string pub = 1;
  string pvt = 2;
}

message AccountData {
  EthereumAccount eth_account = 1;
  string eth_default_account_name = 2;
  string receive_event_notification_endpoint = 3;
  string identity_id = 4;
  KeyPair signing_key_pair = 5;
  KeyPair p2p_key_pair = 7;
}
