syntax = "proto3";

package funding;

option go_package = "fundingpb";
option java_multiple_files = true;
option java_outer_classname = "FundingProto";
option java_package = "com.funding";

import "document/service.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// FundingService contains all common interactions for funding extension documents
service FundingService {
  rpc Create(FundingCreatePayload) returns (FundingResponse) {
    option (google.api.http) = {
      post: "/document/{identifier}/extension/funding/agreement"
      body: "*"
    };
  }
}

message FundingCreatePayload {
  string identifier = 1;
  FundingData data = 2;
}

message FundingResponse {
  document.ResponseHeader header = 1;
  FundingData data = 2;
}

// FundingData is the default funding extension schema
message FundingData {
  string agreement_id = 1;
  string amount = 2;
  string apr = 3;
  string days = 4;
  string fee = 5;
  string repayment_due_date = 7; //(e.g. invoice date + grace days)
  string repayment_occurred_date = 8;
  string repayment_amount = 9;
  string currency = 10; // optional if not set currency of payment details will be used
  string nft_address = 11;
  string payment_details_id = 12;
}
